--- a/works.html
+++ b/works.html
@@ -142,7 +142,7 @@ model-viewer#viewer {
 --poster-color: transparent;
 }
 </style>
-              <model-viewer id="viewer" disable-pan="" auto-rotate="" src="https://interaktive10.github.io/hosted-assets/Grinder.glb" ios-src="https://interaktive10.github.io/hosted-assets/grinder.usdz" style="width: 100%;height: 400px; top: 0px" alt="A 3D model" preload="" ar="" ar-modes="quick-look scene-viewer webxr" shadow-intensity="1" exposure="2" interaction-prompt="auto" camera-controls="" autoplay="true" quick-look-browsers="safari chrome" camera-orbit="0deg 75deg auto" min-field-of-view="10deg" max-field-of-view="100deg" min-camera-orbit="auto 0deg 80%" max-camera-orbit="auto 180deg 100%">
+              <model-viewer id="viewer" disable-pan="" auto-rotate="" src="https://interaktive10.github.io/hosted-assets/Running Vest.glb" style="width: 100%;height: 400px; top: 0px" alt="A 3D model" preload="" ar="" ar-modes="quick-look scene-viewer webxr" shadow-intensity="1" exposure="2" interaction-prompt="auto" camera-controls="" autoplay="true" quick-look-browsers="safari chrome" camera-orbit="0deg 75deg auto" min-field-of-view="10deg" max-field-of-view="100deg" min-camera-orbit="auto 0deg 80%" max-camera-orbit="auto 180deg 100%">
               </model-viewer>
             </div>
           </div>
