--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ model-viewer#viewer {
   <section class="logos-title-small">
     <div class="container-30 w-container">
       <h1 class="heading-9">We&#x27;ve been around the block !<br></h1>
-      <h1 class="heading-9 _1200">Over 1,400 businesses of all sizes have trusted us<br></h1><img class="image-30" src="images/clients-mob-min.png" height="" alt="clients we worked with at interaktive" style="opacity:0" sizes="(max-width: 479px) 94vw, 100vw" data-w-id="2e1a4127-f7d2-0133-c879-694c1bbc2ce1" loading="lazy" srcset="images/clients-mob-min-p-500.png 500w, images/clients-mob-min-p-800.png 800w, images/clients-mob-min-p-1080.png 1080w, images/clients-mob-min-p-1600.png 1600w, images/clients-mob-min.png 2000w"><img src="images/final-logo.png" loading="lazy" style="opacity:0" data-w-id="014f6a3e-4cb8-e57a-d451-01c87b8caae7" srcset="images/final-logo-p-500.png 500w, images/final-logo-p-800.png 800w, images/final-logo-p-1080.png 1080w, images/final-logo.png 1200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1263px) 95vw, 1200px" alt="clients" class="image-41">
+      <h1 class="heading-9 _1200">Over 1,600 businesses of all sizes have trusted us<br></h1><img class="image-30" src="images/clients-mob-min.png" height="" alt="clients we worked with at interaktive" style="opacity:0" sizes="(max-width: 479px) 94vw, 100vw" data-w-id="2e1a4127-f7d2-0133-c879-694c1bbc2ce1" loading="lazy" srcset="images/clients-mob-min-p-500.png 500w, images/clients-mob-min-p-800.png 800w, images/clients-mob-min-p-1080.png 1080w, images/clients-mob-min-p-1600.png 1600w, images/clients-mob-min.png 2000w"><img src="images/final-logo.png" loading="lazy" style="opacity:0" data-w-id="014f6a3e-4cb8-e57a-d451-01c87b8caae7" srcset="images/final-logo-p-500.png 500w, images/final-logo-p-800.png 800w, images/final-logo-p-1080.png 1080w, images/final-logo.png 1200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1263px) 95vw, 1200px" alt="clients" class="image-41">
     </div>
   </section>
   <section class="process-scroll-section">
@@ -200,7 +200,7 @@ model-viewer#viewer {
             <div data-w-id="312c9474-92ec-07e3-3d64-a34381c4f613" class="step6_content_wrapper">
               <div class="text-block-40">......</div>
               <h1 class="heading1-3">Tap into the power of Augmented Reality</h1>
-              <p class="para1-2"><br>Let your customers interact with the product in an immersive way and see the conversion rate increase.<br><br>71% of the customers say they would shop more often if the brand uses AR.<br><br>Over 100 Million customers used AR to shop in 2022 !!</p>
+              <p class="para1-2"><br>Let your customers interact with the product in an immersive way and see the conversion rate increase.<br><br>71% of the customers say they would shop more often if the brand uses AR.<br><br>Over a billion customers used AR to shop in 2024 !!</p>
             </div>
           </div>
         </div>
